// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correct message for multiple expenses 1`] = `
<div>
  <h3>
    Summary
  </h3>
  <p>
    Viewing 3 expenses totalling $1,141.95
  </p>
</div>
`;

exports[`should render correct message for one expense 1`] = `
<div>
  <h3>
    Summary
  </h3>
  <p>
    Viewing 1 expense totalling $1,095.00
  </p>
</div>
`;
